Fix Mobile Moons

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1, user-scalable=no"
+  />
   <meta name="theme-color" content="#000000">
   <!--
       manifest.json provides metadata used when your web app is added to the
@@ -27,7 +28,7 @@
   <title>Moon Ticker</title>
 </head>
 
-<body style="overflow:hidden;">
+<body>
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
